fix: layout fix for notif appearing in the wrong spot on tablets

--- a/byteForge/src/styles/toast.scss
+++ b/byteForge/src/styles/toast.scss
@@ -9,7 +9,7 @@
   max-width: 350px;
   pointer-events: none;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1024px) {
     left: 50%;
     right: auto;
     top: 50%;
